Added Fall-Winter 2020 HOTM

--- a/Newsletters/newsletters.html
+++ b/Newsletters/newsletters.html
@@ -173,6 +173,11 @@ function MM_swapImage() { //v3.0
                                   Summer 2020
                                   </a>
                                   </li>
+                                  <li>
+                                  <a href="https://mailchi.mp/ce2fe3ffc9fd/hart-of-the-matter-for-winter-2020" target="_blank">
+                                  Fall&ndash;Winter 2020
+                                  </a>
+                                  </li>
                                   </ul>
                     </div>
                     For earlier editions, see <a href="https://scvhistory.com/scvhistory/googlesearchresults.htm?cx=010361867682521671142%3Abapf7zmeoby&cof=FORID%3A10&ie=ISO-8859-1&q=hart+of+the+matter&sa=Search" target="_blank">SCVhistory.com</a>
