--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                   </a>
                                   <h2>
                                   Click 
-                                  <a href="https://mailchi.mp/2ccbf814505c/hart-of-the-matter-summer-2020"  target="_blank">
-                                  here for the Summer 2020 Hart of the Matter newsletter</a>.<br>
+                                  <a href="https://mailchi.mp/ce2fe3ffc9fd/hart-of-the-matter-for-winter-2020"  target="_blank">
+                                  here for the Fall&ndash;Winter 2020 Hart of the Matter newsletter</a>.<br>
                                   Click <a href="Newsletters/newsletters.html"> here for other recent newsletters</a>.
                                   </h2>
                                   </td>
