--- a/index.html
+++ b/index.html
@@ -270,11 +270,11 @@ visit the park  - for the health of our other guests, staff and volunteers.
 Please check back here regularly for Friends of Hart Park updates.
 </p></small>
 <p align="center">
-<img src="images/2020HappyHolidays.JPG"/>
+<img src="Event_Pages/Feb_Black_History.jpg"/>
 <br>
 <br>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
-                                <h2>2020 Calendar of Events</h2>
+                                <h2>2021 Calendar of Events</h2>
 <a href= "images/2020UpcomingEvents.JPG" 
 title="2020 Events Canceled -- 2021 to come!" rel="lightbox[upcoming2020]">
 <img align="center" src="images/2020UpcomingEvents-sm.JPG" />
