--- a/index.html
+++ b/index.html
@@ -262,6 +262,15 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                               </b></i></td>
                           <td align="center" valign="top" width="557">
 <p align="center">
+<h3>Some members of The Friends of Hart Park are particpating in the ONLINE EVENT</h3>
+<a target="_blank" href="http://santaclaritaarts.com/newhallywood/">
+<h2>&ldquo;Newhallywood&rdquo; Silent Film Festival!</h2>
+<img src="Event_Pages/NSFF.jpg"/>
+</a>
+<h4>Click the image above for updated details and schedule</h4>
+<h3>Friday&ndash;Sunday, Feb. 12&ndash;14</h3>
+</p>
+<img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
 <img src="images/ParkClosure.png"/>
 <small><p align="center">Also, we request that guests who are sick to not 
 visit the park  - for the health of our other guests, staff and volunteers. 
@@ -275,27 +284,33 @@ Please check back here regularly for Friends of Hart Park updates.
 <br>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                 <h2>2021 Calendar of Events</h2>
+<!--
 <a href= "images/2020UpcomingEvents.JPG" 
-title="2020 Events Canceled -- 2021 to come!" rel="lightbox[upcoming2020]">
+title="2020 Events Canceled - 2021 to come!" rel="lightbox[upcoming2020]">
 <img align="center" src="images/2020UpcomingEvents-sm.JPG" />
 </a>
-<!--
+-->
                                 <h3>Click on links as details become available</h3>
+<!--
                                 <h4>Note: all dates subject to cancellation or postponement due to Covid-19.<br>
 </h4>
 <h3><del>Crossed out items</del> <i>are cancelled due to concerns over Coronavirus</i><br></h3>
 <h4>
                                 Please check back and we will update as we learn more.</h4>
+-->
                                 <table style="text-align: left; width:
                                   100%;" border="0" cellpadding="4"
                                   cellspacing="5">
 <tbody>
 
 <tr> <td id="EventDate">
-Fridays, <del>June 19<sup>th</sup>, July 17<sup>th</sup>, July 31<sup>st</sup>, Aug 21<sup>st</sup> at dusk, Picnic Grounds</del> 
+Friday&ndash;Sunday, Feb. 12<sup>th</sup>&ndash;14<sup>th</sup>
 </td> <td id="Event"> 
-<del>Summer Movies in the Park Series</del>
+<a target="_blank" href="http://santaclaritaarts.com/newhallywood/">
+Online &ldquo;Newhallywood&rdquo; Silent Film Festival
+</a>
 </td></tr>
+<!--
 <tr> <td id="EventDate">
 <del>Saturday, August 8<sup>th</sup> at 6pm, Hart Hall patio</del>
 </td> <td id="Event"> 
@@ -353,6 +368,7 @@ Cowboys &amp; Carols
                                       </td>
                                     </tr>
                                     -->
+</table>
 <!--
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
