--- a/index.htm
+++ b/index.htm
@@ -262,12 +262,13 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                               </b></i></td>
                           <td align="center" valign="top" width="557">
 <p align="center">
-<h3>Some members of The Friends of Hart Park are particpating in the ONLINE EVENT</h3>
+<h3>Some members of The Friends of Hart Park are particpating in on ONLINE EVENT, the </h3>
 <a target="_blank" href="http://santaclaritaarts.com/newhallywood/">
 <h2>&ldquo;Newhallywood&rdquo; Silent Film Festival!</h2>
 <img src="Event_Pages/NSFF.jpg"/>
 </a>
 <h4>Click the image above for updated details and schedule</h4>
+<h3>Featuring films by and talks about William S. Hart</h3>
 <h3>Friday&ndash;Sunday, Feb. 12&ndash;14</h3>
 </p>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
