Added Newhallywood Silent Film Festival

--- a/Newsletters/newsletters.html
+++ b/Newsletters/newsletters.html
@@ -175,9 +175,16 @@ function MM_swapImage() { //v3.0
                                   </li>
                                   <li>
                                   <a href="https://mailchi.mp/ce2fe3ffc9fd/hart-of-the-matter-for-winter-2020" target="_blank">
-                                  Fall&ndash;Winter 2020
+                                  Fall&ndash;Winter 2020/2021
                                   </a>
                                   </li>
+                                  <ul>
+                                  <li>
+                                  <a href="https://us13.campaign-archive.com/?e=__test_email__&u=49d82e29767e797493dce561a&id=c0c3046e3b" target="_blank">
+                                  Winter Supplement &mdash; Newhallywood Silent Film Festival
+                                  </a>
+                                  </li>
+                                  </ul>
                                   </ul>
                     </div>
                     For earlier editions, see <a href="https://scvhistory.com/scvhistory/googlesearchresults.htm?cx=010361867682521671142%3Abapf7zmeoby&cof=FORID%3A10&ie=ISO-8859-1&q=hart+of+the+matter&sa=Search" target="_blank">SCVhistory.com</a>
