--- a/index.html
+++ b/index.html
@@ -267,9 +267,9 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
 <h2>&ldquo;Newhallywood&rdquo; Silent Film Festival!</h2>
 <img src="Event_Pages/NSFF.jpg"/>
 </a>
-<h4>Click the image above for updated details and schedule</h4>
-<h3>Featuring films by and talks about William S. Hart</h3>
-<h3>Friday&ndash;Sunday, Feb. 12&ndash;14</h3>
+<h4>Click the image above for links to videos</h4>
+<h3>Even though the live event is over, you can still view most
+of the videos!</h3>
 </p>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
 <img src="images/ParkClosure.png"/>
