--- a/index.html
+++ b/index.html
@@ -270,20 +270,32 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
 <h4>Click the image above for links to videos</h4>
 <h3>Even though the live event is over, you can still view most
 of the videos!</h3>
-</p>
-<img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
-<img src="images/ParkClosure.png"/>
+<h4 align="left">
+Of particular interest to William S. Hart fans, be sure to look for:
+<ul>
+<li>
+Festival Welcome &amp; SCV in the Silents Tour - which includes a video tour of Wm S. Hart Park
+</li><li>Newhallywood Silent Film Hall of Fame Induction of of Georges M&eacute;li&eagrave;se and William S. Hart
+</li><li>Talk on Thomas Ince - Hart Films producer!
+</li><li>Panel discussion on William S. Hart himself!
+</li><li>Screening of the Hart film on  SCV in the Movies: &ldquo;The Toll Gate&rdquo; including interview with &ldquo;Silents Under the Stars&rdquo; composer/performer Ray Lowe
+</li>
+</ul>
+<p align="center">
+<img align="center" src="images/baseline_v2.gif" border="0" height="24" width="546"/>
+<img align="center" src="images/ParkClosure.png"/></p>
 <small><p align="center">Also, we request that guests who are sick to not 
 visit the park  - for the health of our other guests, staff and volunteers. 
 </p>
-<p>
+<p align="center">
 Please check back here regularly for Friends of Hart Park updates.
 </p></small>
+<img src="images/baseline_v2.gif" border="0" height="24" width="546"/>
 <p align="center">
 <img src="Event_Pages/Feb_Black_History.jpg"/>
 <br>
 <br>
-<img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
+<p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                 <h2>2021 Calendar of Events</h2>
 <!--
 <a href= "images/2020UpcomingEvents.JPG" 
