Fixed spelling of Georges last name

--- a/index.htm
+++ b/index.htm
@@ -275,7 +275,7 @@ Of particular interest to William S. Hart fans, be sure to look for:
 <ul>
 <li>
 Festival Welcome &amp; SCV in the Silents Tour - which includes a video tour of Wm S. Hart Park
-</li><li>Newhallywood Silent Film Hall of Fame Induction of of Georges M&eacute;li&eagrave;se and William S. Hart
+</li><li>Newhallywood Silent Film Hall of Fame Induction of Georges M&eacute;li&egrave;se and William S. Hart
 </li><li>Talk on Thomas Ince - Hart Films producer!
 </li><li>Panel discussion on William S. Hart himself!
 </li><li>Screening of the Hart film on  SCV in the Movies: &ldquo;The Toll Gate&rdquo; including interview with &ldquo;Silents Under the Stars&rdquo; composer/performer Ray Lowe
