Removed Black History Month, and added addendum to Winter HOTM.

--- a/Newsletters/newsletters.html
+++ b/Newsletters/newsletters.html
@@ -184,6 +184,11 @@ function MM_swapImage() { //v3.0
                                   Winter Supplement &mdash; Newhallywood Silent Film Festival
                                   </a>
                                   </li>
+                                  <li>
+                                  <a href="https://mailchi.mp/49444e18b867/hart-of-the-matter-supplement-critter-corner-offer" target="_blank">
+                                  Winter Supplement &mdash; Critter Corner
+                                  </a>
+                                  </li>
                                   </ul>
                                   </ul>
                     </div>
