--- a/index.html
+++ b/index.html
@@ -262,7 +262,14 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                               </b></i></td>
                           <td align="center" valign="top" width="557">
 <p align="center">
-<h3>Some members of The Friends of Hart Park are particpating in on ONLINE EVENT, the </h3>
+<h3>New IN-PERSON (not online) Hart Park Event!</h3>
+<a href= "Event_Pages/OvernightFamilyCamping2021_lg.jpg" 
+title="Overnight Family Camping" rel="lightbox[camping]">
+<img src="Event_Pages/OvernightFamilyCamping2021_sm.jpg"/>
+<br> Click for details!</p>
+</a>
+<img align="center" src="images/baseline_v2.gif" border="0" height="24" width="546"/>
+<h3>Some members of The Friends of Hart Park particpated in the </h3>
 <a target="_blank" href="http://santaclaritaarts.com/newhallywood/">
 <h2>&ldquo;Newhallywood&rdquo; Silent Film Festival!</h2>
 <img src="Event_Pages/NSFF.jpg"/>
@@ -281,15 +288,6 @@ Festival Welcome &amp; SCV in the Silents Tour - which includes a video tour of 
 </li><li>Screening of the Hart film on  SCV in the Movies: &ldquo;The Toll Gate&rdquo; including interview with &ldquo;Silents Under the Stars&rdquo; composer/performer Ray Lowe
 </li>
 </ul>
-<p align="center">
-<img align="center" src="images/baseline_v2.gif" border="0" height="24" width="546"/>
-<img align="center" src="images/ParkClosure.png"/></p>
-<small><p align="center">Also, we request that guests who are sick to not 
-visit the park  - for the health of our other guests, staff and volunteers. 
-</p>
-<p align="center">
-Please check back here regularly for Friends of Hart Park updates.
-</p></small>
 <p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                 <h2>2021 Calendar of Events</h2>
 <!--
@@ -316,6 +314,30 @@ Friday&ndash;Sunday, Feb. 12<sup>th</sup>&ndash;14<sup>th</sup>
 </td> <td id="Event"> 
 <a target="_blank" href="http://santaclaritaarts.com/newhallywood/">
 Online &ldquo;Newhallywood&rdquo; Silent Film Festival
+</a>
+</td></tr>
+<tr> <td id="EventDate">
+Friday, Jun. 11<sup>th</sup>
+</td> <td id="Event"> 
+<a href= "Event_Pages/OvernightFamilyCamping2021_lg.jpg" 
+title="Overnight Family Camping" rel="lightbox[camping]">
+Overnight Family Camping
+</a>
+</td></tr>
+<tr> <td id="EventDate">
+Friday, Jul. 9<sup>th</sup>
+</td> <td id="Event"> 
+<a href= "Event_Pages/OvernightFamilyCamping2021_lg.jpg" 
+title="Overnight Family Camping" rel="lightbox[camping]">
+Overnight Family Camping
+</a>
+</td></tr>
+<tr> <td id="EventDate">
+Friday, Aug. 13<sup>th</sup>
+</td> <td id="Event"> 
+<a href= "Event_Pages/OvernightFamilyCamping2021_lg.jpg" 
+title="Overnight Family Camping" rel="lightbox[camping]">
+Overnight Family Camping
 </a>
 </td></tr>
 <!--
