--- a/index.html
+++ b/index.html
@@ -310,10 +310,11 @@ title="2020 Events Canceled - 2021 to come!" rel="lightbox[upcoming2020]">
 <tbody>
 
 <tr> <td id="EventDate">
-Friday&ndash;Sunday, Feb. 12<sup>th</sup>&ndash;14<sup>th</sup>
+Wednesdays &amp; Fridays, June into August
 </td> <td id="Event"> 
-<a target="_blank" href="http://santaclaritaarts.com/newhallywood/">
-Online &ldquo;Newhallywood&rdquo; Silent Film Festival
+<a href= "Event_Pages/YogaHart2021_lg.png" 
+title="Yoga at Hart Park" rel="lightbox[yoga]">
+Summer Yoga at Wm. S. Hart park
 </a>
 </td></tr>
 <tr> <td id="EventDate">
