Removed canceled camping event

--- a/index.htm
+++ b/index.htm
@@ -207,8 +207,8 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                   </a>
                                   <h2>
                                   Click 
-                                  <a href="https://mailchi.mp/ce2fe3ffc9fd/hart-of-the-matter-for-winter-2020"  target="_blank">
-                                  here for the Fall&ndash;Winter 2020 Hart of the Matter newsletter</a>.<br>
+                                  <a href="https://mailchi.mp/844fd0b99822/hart-of-the-matter-spring-2021"  target="_blank">
+                                  here for the Spring 2021 Hart of the Matter newsletter</a>.<br>
                                   Click <a href="Newsletters/newsletters.html"> here for other recent newsletters</a>.
                                   </h2>
                                   </td>
@@ -262,13 +262,9 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                               </b></i></td>
                           <td align="center" valign="top" width="557">
 <p align="center">
-<h3>New IN-PERSON (not online) Hart Park Event!</h3>
-<a href= "Event_Pages/OvernightFamilyCamping2021_lg.jpg" 
-title="Overnight Family Camping" rel="lightbox[camping]">
-<img src="Event_Pages/OvernightFamilyCamping2021_sm.jpg"/>
-<br> Click for details!</p>
-</a>
+<!--
 <img align="center" src="images/baseline_v2.gif" border="0" height="24" width="546"/>
+-->
 <h3>Some members of The Friends of Hart Park particpated in the </h3>
 <a target="_blank" href="http://santaclaritaarts.com/newhallywood/">
 <h2>&ldquo;Newhallywood&rdquo; Silent Film Festival!</h2>
@@ -315,30 +311,6 @@ Wednesdays &amp; Fridays, June into August
 <a href= "Event_Pages/YogaHart2021_lg.png" 
 title="Yoga at Hart Park" rel="lightbox[yoga]">
 Summer Yoga at Wm. S. Hart park
-</a>
-</td></tr>
-<tr> <td id="EventDate">
-Friday, Jun. 11<sup>th</sup>
-</td> <td id="Event"> 
-<a href= "Event_Pages/OvernightFamilyCamping2021_lg.jpg" 
-title="Overnight Family Camping" rel="lightbox[camping]">
-Overnight Family Camping
-</a>
-</td></tr>
-<tr> <td id="EventDate">
-Friday, Jul. 9<sup>th</sup>
-</td> <td id="Event"> 
-<a href= "Event_Pages/OvernightFamilyCamping2021_lg.jpg" 
-title="Overnight Family Camping" rel="lightbox[camping]">
-Overnight Family Camping
-</a>
-</td></tr>
-<tr> <td id="EventDate">
-Friday, Aug. 13<sup>th</sup>
-</td> <td id="Event"> 
-<a href= "Event_Pages/OvernightFamilyCamping2021_lg.jpg" 
-title="Overnight Family Camping" rel="lightbox[camping]">
-Overnight Family Camping
 </a>
 </td></tr>
 <!--
