Added Barnyard Reopneing, and Silents Save the Date.

--- a/Zoo/index.html
+++ b/Zoo/index.html
@@ -138,13 +138,46 @@ function MM_swapImage() { //v3.0
 					</TABLE>
 					</div>
 					<HR>
-					<p align="center" style="margin-top: 7px; margin-bottom: 5px">
-					<b><i><font size="4" color="#0050A5">Thanks to a gift from Walt Disney 
+<h2 align="center">Welcome to William S. Hart Park Barnyard info page!</h2>
+
+<p align="center">
+<img align="center" src="../Event_Pages/BarnyardReopening2021_sm.JPG"/>
+<br>
+<p>We cordially invite you to come visit us for our Grand Re-Opening of the Barnyard on August 15, 2021!  
+<p>On February 27, 2019, we were forced to close the Barnyard to the public due to the threat of a very contagious bird disease called Virulent Newcastle's Disease.  This mandatory quarantine affected all facilities that displayed birds to the public in L.A. County (and surrounding counties).  Our birds were fine and healthy &mdash; the quarantine was designed to keep them protected.  
+<p>From that quarantine, we rolled right into a Barnyard closure because of Covid-19 and the inability to socially distance groups of people in the aisle ways of the Barnyard.  
+<p>And, finally, we had a rabbit quarantine that affected us as of March 2021, which will ended in late July 2021.  RHD (Rabbit Hemorrhagic Disease) is a very serious illness that only affects rabbits and hares (in both captivity and the wild).  
+<p>So&#8230; after 2&#189; years of our Barnyard being closed to the public, we are VERY EXCITED to announce the Grand Re-Opening on August 15, 2021!!  The hours will be 9am until 2pm.  That day, we will have our staff and volunteers giving animal talks and do animal presentations.  Plus, there will be activities for children and giveaways!  In addition, the Hart Park Gift Shop and the Bookstore will be open for the first time in 2&#189; years, as well.  And, don't forget to visit our bison herd, which are located in the 22+ acre enclosure to the west of the Barnyard (just off La Loma Road).  
+<p>After August 15th, the Barnyard will be open from 9am until 2pm, on all days the park is open (Note:  Park is closed Mondays).  
+<p><i>Hours/Availability to visit Barnyard are subject to change without notice, due to unforeseen circumstances.</i>
+
+</p>
+                    <!--
+					<p class="cowboyfest" align="center">
+                    <em>Barnyard now partially open 9am-2pm every day!</em>
+                    <p class="cowboyfest" align="center">
+                    Only the chicken area is still off limits due to the dangers of our 
+                    healthy chickens contracting Newcastle disease.
+                    <p class="cowboyfest" align="center">
+                    So, come on by and see the Alpacas and all the other fun 
+                    (non-fowl) friends at our now-open barnyard!!!
+                    </p>
+                    -->
+					<p class="lots" align="center" style="margin-top: 7px; margin-bottom: 5px">
+					<small>
+</small>
+<p align="center" style="margin-top: 7px; margin-bottom: 5px">
+<br><i>&mdash;The Hart Park Staff, 661-259-1750</i>
+                    
+                    
+                    <!--Thanks to a gift from Walt Disney 
 					nearly 50 years ago, there are American Bison (buffalo) in the park. 
 					The descendants of some of those original buffalo are 
 					roaming our park!&nbsp; The last remaining bison from Disney's gift died in 1994.<br><br>
-To read more about Walt Disney's donation of bison to the Wm. S. Hart Park see these articles from the SCV Historical Society's picture archive site:<br>
-					</font></i></b></p>
+To read more about Walt Disney's donation of bison to the Wm. S. Hart Park see these articles from the SCV Historical Society's picture archive site:
+-->
+<br> </i></p>
+<!--
 					<ul>
 						<li>
 						<p align="center" style="margin-top: 7px; margin-bottom: 5px">
@@ -163,10 +196,14 @@ To read more about Walt Disney's donation of bison to the Wm. S. Hart Park see t
 					is also a newly refurbished animal area that the kids will 
 					love!&nbsp; Come on by and enjoy the horses, alpacas, a deer and several ducks, chickens, etc.&nbsp;
 					</font></i></b></p>
+-->
 					<p align="center" style="margin-top: 7px; margin-bottom: 5px">&nbsp;</p>
 					<p align="center" style="margin-top: 7px; margin-bottom: 5px">
+                    <!--
 					<b><i><font size="4" color="#0050A5">Food for feeding some 
-					of the animals may be purchased at the Trading Post.</font></i></b></TD>
+					of the animals may be purchased at the Trading Post.</font></i></b>
+                    -->
+                    </TD>
 					<TD width="60">
 					&nbsp;
 					</TD>
