--- a/Zoo/animals.html
+++ b/Zoo/animals.html
@@ -138,8 +138,19 @@ function MM_swapImage() { //v3.0
 					</TABLE>
 					</div>
 					<HR>
+<h2 align="center">Welcome to William S. Hart Park Barnyard info page!</h2>
+
 <p align="center">
-<img align="center" src="../images/ParkClosure.png"/>
+<img align="center" src="../Event_Pages/BarnyardReopening2021_sm.JPG"/>
+<br>
+<p>We cordially invite you to come visit us for our Grand Re-Opening of the Barnyard on August 15, 2021!  
+<p>On February 27, 2019, we were forced to close the Barnyard to the public due to the threat of a very contagious bird disease called Virulent Newcastle's Disease.  This mandatory quarantine affected all facilities that displayed birds to the public in L.A. County (and surrounding counties).  Our birds were fine and healthy &mdash; the quarantine was designed to keep them protected.  
+<p>From that quarantine, we rolled right into a Barnyard closure because of Covid-19 and the inability to socially distance groups of people in the aisle ways of the Barnyard.  
+<p>And, finally, we had a rabbit quarantine that affected us as of March 2021, which will ended in late July 2021.  RHD (Rabbit Hemorrhagic Disease) is a very serious illness that only affects rabbits and hares (in both captivity and the wild).  
+<p>So&#8230; after 2&#189; years of our Barnyard being closed to the public, we are VERY EXCITED to announce the Grand Re-Opening on August 15, 2021!!  The hours will be 9am until 2pm.  That day, we will have our staff and volunteers giving animal talks and do animal presentations.  Plus, there will be activities for children and giveaways!  In addition, the Hart Park Gift Shop and the Bookstore will be open for the first time in 2&#189; years, as well.  And, don't forget to visit our bison herd, which are located in the 22+ acre enclosure to the west of the Barnyard (just off La Loma Road).  
+<p>After August 15th, the Barnyard will be open from 9am until 2pm, on all days the park is open (Note:  Park is closed Mondays).  
+<p><i>Hours/Availability to visit Barnyard are subject to change without notice, due to unforeseen circumstances.</i>
+
 </p>
                     <!--
 					<p class="cowboyfest" align="center">
@@ -154,14 +165,8 @@ function MM_swapImage() { //v3.0
                     -->
 					<p class="lots" align="center" style="margin-top: 7px; margin-bottom: 5px">
 					<small>
-					<small>
-                                    On February 27, 2019, a California Regional Quarantine was issued for all of L.A. County and sections of Riverside County and San Bernardino County for all public exhibitions of birds due to the threat of Virulent Newcastle Disease.  As a result, our Barnyard is quarantined and not available to the public until the quarantine is lifted.  
-                                    <em>Please know our animal residents are fine and this quarantine is helping to keep them safe.  </em>
-</small>
 </small>
 <p align="center" style="margin-top: 7px; margin-bottom: 5px">
-<small>We appreciate your patience and understanding during this time.  Thank you.
-</small>
 <br><i>&mdash;The Hart Park Staff, 661-259-1750</i>
                     
                     
