--- a/index.html
+++ b/index.html
@@ -265,25 +265,12 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
 <!--
 <img align="center" src="images/baseline_v2.gif" border="0" height="24" width="546"/>
 -->
-<h3>Some members of The Friends of Hart Park particpated in the </h3>
-<a target="_blank" href="http://santaclaritaarts.com/newhallywood/">
-<h2>&ldquo;Newhallywood&rdquo; Silent Film Festival!</h2>
-<img src="Event_Pages/NSFF.jpg"/>
+<a href= "Event_Pages/BarnyardReopening2021_lg.JPG" 
+title="Barnyard Grand Reopening" rel="lightbox[barnyard]">
+<img src="Event_Pages/BarnyardReopening2021_sm.JPG"/>
 </a>
-<h4>Click the image above for links to videos</h4>
-<h3>Even though the live event is over, you can still view most
-of the videos!</h3>
-<h4 align="left">
-Of particular interest to William S. Hart fans, be sure to look for:
-<ul>
-<li>
-Festival Welcome &amp; SCV in the Silents Tour - which includes a video tour of Wm S. Hart Park
-</li><li>Newhallywood Silent Film Hall of Fame Induction of Georges M&eacute;li&egrave;se and William S. Hart
-</li><li>Talk on Thomas Ince - Hart Films producer!
-</li><li>Panel discussion on William S. Hart himself!
-</li><li>Screening of the Hart film on  SCV in the Movies: &ldquo;The Toll Gate&rdquo; including interview with &ldquo;Silents Under the Stars&rdquo; composer/performer Ray Lowe
-</li>
-</ul>
+<p align="center">For an interesting history of all that led up to this reopening, click 
+<a href="Zoo/animals.html">here</a> and scroll down...
 <p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                 <h2>2021 Calendar of Events</h2>
 <!--
@@ -293,9 +280,9 @@ title="2020 Events Canceled - 2021 to come!" rel="lightbox[upcoming2020]">
 </a>
 -->
                                 <h3>Click on links as details become available</h3>
-<!--
                                 <h4>Note: all dates subject to cancellation or postponement due to Covid-19.<br>
 </h4>
+<!--
 <h3><del>Crossed out items</del> <i>are cancelled due to concerns over Coronavirus</i><br></h3>
 <h4>
                                 Please check back and we will update as we learn more.</h4>
@@ -304,13 +291,28 @@ title="2020 Events Canceled - 2021 to come!" rel="lightbox[upcoming2020]">
                                   100%;" border="0" cellpadding="4"
                                   cellspacing="5">
 <tbody>
-
+<tr> <td id="EventDate">
+Sunday, August 15<sup>th</sup> 9am&mdash;2pm
+</td> <td id="Event"> 
+<a href= "Event_Pages/BarnyardReopening2021_lg.JPG" 
+title="Barnyard Grand Reopening" rel="lightbox[barnyard]">
+Barnyard Grand Reopening!
+</a>
+</td></tr>
 <tr> <td id="EventDate">
 Wednesdays &amp; Fridays, June into August
 </td> <td id="Event"> 
 <a href= "Event_Pages/YogaHart2021_lg.png" 
 title="Yoga at Hart Park" rel="lightbox[yoga]">
 Summer Yoga at Wm. S. Hart park
+</a>
+</td></tr>
+<tr> <td id="EventDate">
+Saturday, October 2<sup>nd</sup> SAVE THE DATE!
+</td> <td id="Event"> 
+<a href= "Event_Pages/silents/silents2021/Silents2021saveTheDate_lg.jpg"
+title="Silents Under the Stars" rel="lightbox[silents]">
+Silents Under the Stars
 </a>
 </td></tr>
 <!--
