--- a/Newsletters/newsletters.html
+++ b/Newsletters/newsletters.html
@@ -195,6 +195,11 @@ function MM_swapImage() { //v3.0
                                   Spring 2021
                                   </a>
                                   </li>
+                                  <li>
+                                  <a href="https://mailchi.mp/cc4b9425129a/hart-of-the-matter-for-summer-2021" target="_blank">
+                                  Summer 2021
+                                  </a>
+                                  </li>
                                   </ul>
                     </div>
                     For earlier editions, see <a href="https://scvhistory.com/scvhistory/googlesearchresults.htm?cx=010361867682521671142%3Abapf7zmeoby&cof=FORID%3A10&ie=ISO-8859-1&q=hart+of+the+matter&sa=Search" target="_blank">SCVhistory.com</a>
