--- a/index.htm
+++ b/index.htm
@@ -265,10 +265,7 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
 <!--
 <img align="center" src="images/baseline_v2.gif" border="0" height="24" width="546"/>
 -->
-<a href= "Event_Pages/BarnyardReopening2021_lg.JPG" 
-title="Barnyard Grand Reopening" rel="lightbox[barnyard]">
-<img src="Event_Pages/BarnyardReopening2021_sm.JPG"/>
-</a>
+<img src="images/baryardOpen.jpg"/>
 <p align="center">For an interesting history of all that led up to this reopening, click 
 <a href="Zoo/animals.html">here</a> and scroll down...
 <p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
@@ -291,14 +288,6 @@ title="2020 Events Canceled - 2021 to come!" rel="lightbox[upcoming2020]">
                                   100%;" border="0" cellpadding="4"
                                   cellspacing="5">
 <tbody>
-<tr> <td id="EventDate">
-Sunday, August 15<sup>th</sup> 9am&mdash;2pm
-</td> <td id="Event"> 
-<a href= "Event_Pages/BarnyardReopening2021_lg.JPG" 
-title="Barnyard Grand Reopening" rel="lightbox[barnyard]">
-Barnyard Grand Reopening!
-</a>
-</td></tr>
 <tr> <td id="EventDate">
 Wednesdays &amp; Fridays, June into August
 </td> <td id="Event"> 
