--- a/index.html
+++ b/index.html
@@ -269,6 +269,15 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
 <p align="center">For an interesting history of all that led up to this reopening, click 
 <a href="Zoo/animals.html">here</a> and scroll down...
 <p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
+<h1>Silents Under the Stars Postponed</h1>
+<p> Dear Friends of Hart Park, <p> We simply didn't want to chance it this year, so we're postponing the 
+return of Silents Under the Stars we had been planning for this October.  There's
+just too many variables at play, and we didn't want to produce an event that wouldn't be 
+the quality we're all used to.  <p>  But please know, we're already working on plans
+for <b>Silents Under the Stars 2022</b>, and we have some ideas that will make for a truly 
+amazing comeback event!  
+<p>So please stay tuned!
+<p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                 <h2>2021 Calendar of Events</h2>
 <!--
 <a href= "images/2020UpcomingEvents.JPG" 
@@ -288,6 +297,7 @@ title="2020 Events Canceled - 2021 to come!" rel="lightbox[upcoming2020]">
                                   100%;" border="0" cellpadding="4"
                                   cellspacing="5">
 <tbody>
+<!--
 <tr> <td id="EventDate">
 Wednesdays &amp; Fridays, June into August
 </td> <td id="Event"> 
@@ -296,15 +306,6 @@ title="Yoga at Hart Park" rel="lightbox[yoga]">
 Summer Yoga at Wm. S. Hart park
 </a>
 </td></tr>
-<tr> <td id="EventDate">
-Saturday, October 2<sup>nd</sup> SAVE THE DATE!
-</td> <td id="Event"> 
-<a href= "Event_Pages/silents/silents2021/Silents2021saveTheDate_lg.jpg"
-title="Silents Under the Stars" rel="lightbox[silents]">
-Silents Under the Stars
-</a>
-</td></tr>
-<!--
 <tr> <td id="EventDate">
 <del>Saturday, August 8<sup>th</sup> at 6pm, Hart Hall patio</del>
 </td> <td id="Event"> 
