--- a/Event_Pages/silents.html
+++ b/Event_Pages/silents.html
@@ -120,7 +120,7 @@ function MM_swapImage() { //v3.0
 										<br>
 										and the<br>
 &nbsp;William S. Hart Park &amp; Museum <br><br>
-<h2 align="center" class="silents">are very sorry to report the postponement, due to the Covid-19 pandemic, of the 2020 </font></span></span></h2></p>
+<h2 align="center" class="silents">are very sorry to report the postponement, due to the Covid-19 pandemic, of the 2020 &amp; 2021 </font></span></span></h2></p>
 											<p align="center" style="margin-top: 20px; margin-bottom: 20px">
 										<span class="Apple-style-span">
 										<span style="border-collapse: separate; color: #C80000; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-align: auto; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-border-horizontal-spacing: 0px; -webkit-border-vertical-spacing: 0px; -webkit-text-decorations-in-effect: none; -webkit-text-size-adjust: auto; -webkit-text-stroke-width: 0px" class="Apple-style-span">
