--- a/Newsletters/newsletters.html
+++ b/Newsletters/newsletters.html
@@ -200,6 +200,11 @@ function MM_swapImage() { //v3.0
                                   Summer 2021
                                   </a>
                                   </li>
+                                  <li>
+                                  <a href="https://mailchi.mp/f069ac424975/hart-of-the-matter-fall-winter-2021-2022" target="_blank">
+                                  Fall&ndash;Winter 2021/2022
+                                  </a>
+                                  </li>
                                   </ul>
                     </div>
                     For earlier editions, see <a href="https://scvhistory.com/scvhistory/googlesearchresults.htm?cx=010361867682521671142%3Abapf7zmeoby&cof=FORID%3A10&ie=ISO-8859-1&q=hart+of+the+matter&sa=Search" target="_blank">SCVhistory.com</a>
