--- a/index.html
+++ b/index.html
@@ -265,19 +265,22 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
 <!--
 <img align="center" src="images/baseline_v2.gif" border="0" height="24" width="546"/>
 -->
-<h4>Come celebrate the holidays with Shopping, Santa, Critters and Twinkling Lights!</h4>
-<a href= "Event_Pages/2021_barnyardLightTour-lg.jpg" 
-title="Barnyard Lights Tour" rel="lightbox[barnyardlights]">
-<img src="Event_Pages/2021_barnyardLightTour-sm.jpg"/>
+<h3>Click below to see pictures from the</h3>
+<h2>Barnyard Holiday Lights!</h2>
+<a href= "https://www.facebook.com/media/set/?vanity=friendsofhartpark&set=a.4736664019731837" 
+title="Barnyard Lights Tour" target="_blank">
+<img src="Event_Pages/2021-BarnyardLightsTourr-sm.jpg"/>
 </a>
 <p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
 <img src="images/baryardOpen.jpg"/>
 <p align="center">For an interesting history of all that led up to this reopening, click 
 <a href="Zoo/animals.html">here</a> and scroll down...
 <p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
-                                <h2>2021 Calendar of Events</h2>
+                                <h2>2022 Calendar of Events</h2>
+<!--
                                 <h3>Click on links as details become available</h3>
-                                <h4>Note: all dates subject to cancellation or postponement due to Covid-19.<br>
+-->
+                                <h3><br>Stay tuned for upcoming events!<br><br></h3>
 </h4>
 <!--
 <h3><del>Crossed out items</del> <i>are cancelled due to concerns over Coronavirus</i><br></h3>
@@ -288,6 +291,7 @@ title="Barnyard Lights Tour" rel="lightbox[barnyardlights]">
                                   100%;" border="0" cellpadding="4"
                                   cellspacing="5">
 <tbody>
+<!--
 <tr> <td id="EventDate">
 Saturday, December 18<sup>th</sup> 4pm&mdash;8pm
 </td> <td id="Event"> 
@@ -296,6 +300,7 @@ title="Barnyard Lights Tour" rel="lightbox[barnyardlights]">
 Barnyard Lights Tour
 </a>
 </td></tr>
+-->
 <!--
 <tr> <td id="EventDate">
 <del>Saturday, August 8<sup>th</sup> at 6pm, Hart Hall patio</del>
