Updated main page to link to Fall/Winter 2021/2022 newsletter

--- a/index.htm
+++ b/index.htm
@@ -207,8 +207,8 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
                                   </a>
                                   <h2>
                                   Click 
-                                  <a href="https://mailchi.mp/cc4b9425129a/hart-of-the-matter-for-summer-2021"  target="_blank">
-                                  here for the Summer 2021 Hart of the Matter newsletter</a>.<br>
+                                  <a href="https://mailchi.mp/f069ac424975/hart-of-the-matter-fall-winter-2021-2022"  target="_blank">
+                                  here for the Fall&ndash;Winter 2021/2022 Hart of the Matter newsletter</a>.<br>
                                   Click <a href="Newsletters/newsletters.html"> here for other recent newsletters</a>.
                                   </h2>
                                   </td>
