Added Barnyard Tour

--- a/index.htm
+++ b/index.htm
@@ -265,11 +265,11 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
 <!--
 <img align="center" src="images/baseline_v2.gif" border="0" height="24" width="546"/>
 -->
-<h3>Click below to see pictures from the</h3>
-<h2>Barnyard Holiday Lights!</h2>
-<a href= "https://www.facebook.com/media/set/?vanity=friendsofhartpark&set=a.4736664019731837" 
-title="Barnyard Lights Tour" target="_blank">
-<img src="Event_Pages/2021-BarnyardLightsTourr-sm.jpg"/>
+<h3>Click below to arrange to get a FREE</h3>
+<a href= "Event_Pages/2022barnyardTours.png" 
+title="Barnyard Tour" rel="lightbox[barnyardTour]">
+<h2>Barnyard Tour!</h2><br>
+<img src="Event_Pages/2022barnyardTours-sm.png"/>
 </a>
 <p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
 <img src="images/baryardOpen.jpg"/>
