--- a/index.html
+++ b/index.html
@@ -265,18 +265,14 @@ src="https://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook
 <!--
 <img align="center" src="images/baseline_v2.gif" border="0" height="24" width="546"/>
 -->
-<h3>Click below to arrange to get a FREE</h3>
-<a href= "Event_Pages/2022barnyardTours.png" 
-title="Barnyard Tour" rel="lightbox[barnyardTour]">
-<h2>Barnyard Tour!</h2><br>
-<img src="Event_Pages/2022barnyardTours-sm.png"/>
+<h3>Silents Under The Stars makes a Comeback!</h3>
+<a href="Event_Pages/silents/2022/SilentsSaveTheDate_lg.jpg" 
+title="Silents Under the Stars Returns!" rel="lightbox[silents2022]">
+<img src="Event_Pages/silents/2022/SilentsSaveTheDate_sm.jpg"
 </a>
 <p align="center"><img src="images/baseline_v2.gif" border="0" height="24" width="546"/></p>
                                 <h2>2022 Calendar of Events</h2>
-<!--
                                 <h3>Click on links as details become available</h3>
--->
-                                <h3><br>Stay tuned for upcoming events!<br><br></h3>
 </h4>
 <!--
 <h3><del>Crossed out items</del> <i>are cancelled due to concerns over Coronavirus</i><br></h3>
@@ -287,22 +283,22 @@ title="Barnyard Tour" rel="lightbox[barnyardTour]">
                                   100%;" border="0" cellpadding="4"
                                   cellspacing="5">
 <tbody>
-<!--
 <tr> <td id="EventDate">
-Saturday, December 18<sup>th</sup> 4pm&mdash;8pm
+Saturdays 10:30am&mdash;12:30pm
 </td> <td id="Event"> 
-<a href= "Event_Pages/2021_barnyardLightTour-lg.jpg" 
-title="Barnyard Lights Tour" rel="lightbox[barnyardlights]">
-Barnyard Lights Tour
+<a href= "Event_Pages/2022barnyardTours.png" 
+title="Barnyard Tours" rel="lightbox[barnyardTour]">
+Barnyard Tours
 </a>
 </td></tr>
--->
-<!--
 <tr> <td id="EventDate">
-<del>Saturday, August 8<sup>th</sup> at 6pm, Hart Hall patio</del>
+Saturday, September 17<sup>th</sup>
 </td> <td id="Event"> 
-<del>Silents Under the Stars</del>
+<a href= "Event_Pages/silents/2022/SilentsSaveTheDate_lg.jpg" 
+title="Silents Under the Stars Returns!" rel="lightbox[silents]">
+Silents Under the Stars Returns!
 </td></tr>
+<!--
 <tr> <td id="EventDate">
 <del>Saturday &amp; Sunday, Sep 12<sup>th</sup> &amp; 13<sup>th</sup> 10am&mdash;4pm in Hart Hall</del>
 </td> <td id="Event"> 
